2011-02-26  vadim  <vadim@netcitadel.com>

	* PIXImporter.cpp (rearrangeVlanInterfaces): see #2145 "ASA Import
	of VLAN interfaces - Advanced Interface Settings not available".
	Vlan interfaces discovered in the process of PIX configuration
	import should be created as subinterfaces of the corresponding
	parent with correct interface type and vlan id.

	* parsers/pix.g (intf_address): fixes #2146 Issue a warning when
	parser encounters "standby" parameter in an interface
	configuration. We do not support import of PIX failover
	configuration at this time.

	* platforms.cpp (findBestVersionMatch): fixes #2147 "ASA Import -
	some versions are not detected correctly". when user imports
	PIX/ASA configuration, firewall object will automatically be
	configured with the version setting that best fits version
	indicated in the imported configuration. Note that fwbuilder does
	not provide the list of version numbers that match PIX/ASA
	versions exactly, for example we do not have settings "7.1" and
	"7.2". Devices running these versions of PIX/ASA software should
	be configured with version "7.0" in fwbuilder.

2011-02-25  vadim  <vadim@netcitadel.com>

	* parsers/pix.g (intf_address): see #87 "Import of PIX
	configuration".  Basic grammar that can parse host name, version,
	interfaces, their names, labels, addresses, security levels and
	few other things for PIX 6, 7 and ASA 8. PIX standby configuration
	is not parsed (so we can't import cluster configuration at this
	time). More work needs to be done to import named objects, object
	groups, as well as policy and nat rules.

2011-02-24  Vadim Kurland  <vadim@netcitadel.com>

	* FirewallInstaller.cpp (getGeneratedFileName): see #2047 "Inspect
	generated files button shows different path information". Do not
	pass full path to the output file as an argument of the "-o"
	option when the GUI launches policy compiler. Since the "-d"
	option passes directory path where files sould be saved, actual